# WykopStatistics

./: README.md  categories.xml
WykopMainDataAlanyzer/: CMakeLists.txt  CategoriesFromFileFactory.h  CommonTypes.cpp  CommonTypes.h  ICharacteristicsFetcher.h  NodesFromXmlFileFetcher.h  TopicCategory.cpp  TopicCategoryWithKeywords.cpp  TopicCategoryWithLambda.cpp  main.cpp
WykopMainDataAlanyzer/Characteristics/: DiggsCharacteristicsAcumulator.cpp
WykopMainDataAlanyzer/lib/gmock-1.7.0/gtest/build-aux/: ltmain.sh
WykopMainDataAlanyzer/src/: CategoriesFromFileFactory.cpp  CategoriesFromFileFactory.h  ICharacteristicsFetcher.cpp  NodesFromXmlFileFetcher.cpp  OneDigg.cpp  OneDigg.h  OneDiggFromXPathNodeFactory.cpp  OneDiggFromXPathNodeFactory.h  ToCsvExporter.cpp  ToCsvExporter.h  TopicCategory.h  TopicCategoryWithKeywords.h  TopicCategoryWithLambda.h  ValuesFromNodeExtractor.h  WykopMainDataAnalyzer.cpp  WykopMainDataAnalyzer.h  main.cpp
WykopMainDataAlanyzer/src/Characteristics/: DiggsByDayCounter.cpp  DiggsByDayCounter.h  DiggsCharacteristicsAcumulator.h
WykopMainDataAlanyzer/src/constantElements/: CharacteristicFileConstants.cpp  CharacteristicFileConstants.h  InputFileConstants.cpp  InputFileConstants.h
WykopMainDataAlanyzer/test/: EndToEndTests.cpp  main.cpp
WykopMainDataAlanyzer/test/endToEndHelp/: ApplicationRunner.cpp  ApplicationRunner.h  CategoriesFileCreator.cpp  CategoriesFileCreator.h  DiggsVectorAnalyzer.cpp  DiggsVectorAnalyzer.h  InputXmlCreator.cpp  InputXmlCreator.h  OutFileAnalyzer.cpp  OutFileAnalyzer.h  OutFileAsserter.cpp  OutFileAsserter.h  RandomDiggsCreator.cpp  RandomDiggsCreator.h
WykopMainDataAlanyzer/test/endToEndHelp/diggCharacteristics/: Day.cpp  Day.h  DiggCharacteristic.h  DiggCharacteristicsContainer.cpp  DiggCharacteristicsContainer.h  DiggTemplate.cpp  DiggTemplate.h  DiggTemplateCharacteristic.h  DiggsCount.cpp  DiggsCount.h  ExpectedDiggCharacteristics.cpp  ExpectedDiggCharacteristics.h  ExpectedDiggCharacteristicsCreator.cpp  ExpectedDiggCharacteristicsCreator.h  MinimalDiggsNumber.cpp  MinimalDiggsNumber.h  OneDiggCount.cpp  OneDiggCount.h
WykopMainDataAlanyzer/test/exceptions/: ColumnWithGivenNameNotFoundException.h
WykopMainDataAlanyzer/test/help/: Algorithm.h  Random.cpp  Random.h  TempFile.cpp  TempFile.h  ToString.h
WykopTopicsFetcher/: CMakeLists.txt  DiggData.cpp  DiggData.h  DiggDataToXmlWriter.cpp  DiggDataToXmlWriter.h  ValuesFromNodeExtractor.cpp  main.cpp
scripts/: AllWebsiteFilesReparingScript.sh  clearingScript.sh  creatingOutputXmlFileWithAllDiggs.sh  downloadingScript.sh  err.txt  scriptFindingAllWebsiteFiles.sh  scriptFindingAllWebsitesAfterCleaning.sh  scriptNormalizingXmlValues.sh  testScript.sh
